@@ -46,9 +46,18 @@ cl_printf (CalClient *client, const char *format, ...)
 }
 
 static void
+objects_added_cb (GObject *object, GList *objects, gpointer data)
+{
+	GList *l;
+	
+	for (l = objects; l; l = l->next)
+		cl_printf (data, "Object added %s\n", icalcomponent_get_uid (l->data));
+}
+
+static void
 query_done_cb (GObject *object, ECalendarStatus status, gpointer data)
 {
-	cl_printf (data, "Query done");
+	cl_printf (data, "Query done\n");
 }
 
 /* Lists the UIDs of objects in a calendar, called as an idle handler */
@@ -132,6 +141,7 @@ cal_opened_cb (CalClient *client, CalClientOpenStatus status, gpointer data)
 		if (!cal_client_get_query (client, "(contains? \"any\" \"Test4\")", &query, NULL))
 			g_warning (G_STRLOC ": Unable to obtain query");
 
+		g_signal_connect (G_OBJECT (query), "objects_added", objects_added_cb, client);
 		g_signal_connect (G_OBJECT (query), "query_done", query_done_cb, client);
 
 		cal_query_start (query);
